<resources>
    <string name="app_name">Perfil</string>
    <string name="texto_boton_guardar">Siguiente</string>
    <string name="click_boton_guardar">Contacto guardado</string>
    <string name="name">Nombre</string>
    <string name="escribaNombre">Escriba su nombre</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="mail">Mail</string>
    <string name="escribaMail">Escriba su mail</string>
    <string name="telefono">Telefono</string>
    <string name="escribaTelefono">Escriba su telefono</string>
    <string name="descripcion">Descripción contacto</string>
    <string name="escribaDescripcion">Escriba su descripción</string>
    <string name="onstart">OnStart</string>
    <string name="onresume">OnResume</string>
    <string name="onrestart">OnRestart</string>
    <string name="onpause">OnPause</string>
    <string name="onstop">OnStop</string>
    <string name="ondestroy">OnDestroy</string>
    <string name="oncreate">OnCreate</string>
    <string name="pname">Nombre</string>
    <string name="ptelefono">Telefono</string>
    <string name="pmail">Mail</string>
    <string name="pdescripcion">Descrippción</string>
    <string name="texto_boton_modificar">Editar datos</string>
    <string name="click_boton_modificar">Modificar contacto</string>
    <string name="confirmar">Confirmar Datos</string>
</resources>
